--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ wheel.py-api = "cp312"
 [tool.cibuildwheel]
 # Necessary to see build output from the actual compilation
 build-verbosity = 1
-skip = ["cp38-*", "pp38-*", "cp39-*", "pp39-*"]
+skip = ["cp38-*", "cp39-*"]
 archs = ["auto64"]          # Only target 64 bit architectures
 
 # Run pytest to ensure that the package was correctly built
